--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ repositories {
 }
 
 buildscript {
-    ext.kotlin_version = '1.0.2'
+    ext.kotlin_version = '1.0.4'
+    ext.kotlintest_version = '1.3.4'
+    ext.junit_version = '4.11'
+
     ext.jsoup_version = '1.8.3'
 
     repositories {
@@ -35,39 +38,20 @@ allprojects {
     targetCompatibility = 1.8
 }
 
-compileJava {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-}
-
-
 subprojects {
-    // Configurations
-    configurations {
-        provided
-        provided.extendsFrom(compile)
-    }
 
     repositories {
+        jcenter()
         mavenCentral()
-    }
-
-    // SourceSets
-    sourceSets {
-        // Additional source set for integrationtests
-        integrationTest {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-        }
     }
 
     dependencies {
 		compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-		testCompile 'junit:junit:4.11'
-		testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+		testCompile "junit:junit:$junit_version"
+		testCompile "io.kotlintest:kotlintest:$kotlintest_version"
 		testCompile 'com.natpryce:hamkrest:1.2.0.0'
-		testCompile "com.nhaarman:mockito-kotlin:0.5.0"
+		testCompile "com.nhaarman:mockito-kotlin:0.6.2"
     }
 }
 
