--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
-{
-  "language": "kotlin",
-  "jdk": "oraclejdk8",
-  "ache": {
-    "directories": [
-      "$HOME/.m2",
-      "$HOME/.gradle"
-    ]
-  },
-  "group": "stable",
-  "dist": "precise",
-  "os": "linux"
-}
+
+language: "java"
+jdk: "oraclejdk8"
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - "$HOME/.m2"
+    - "$HOME/.gradle"
