played around a bit with the jericho parser

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ cache:
   directories:
     - "$HOME/.m2"
     - "$HOME/.gradle"
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
