--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     compile project(":domain")
     compile group: 'com.github.javaparser', name:'javaparser-core', version: '2.3.0'
     compile group: 'net.htmlparser.jericho', name: 'jericho-html', version: '3.3'
+    compile group: 'net.sourceforge.jtds', name: 'jtds', version: '1.3.0'
 }
