--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,7 +1,12 @@
+
+apply plugin: 'antlr'
+
 dependencies {
     compile project(":shared")
     compile project(":domain")
     compile group: 'com.github.javaparser', name:'javaparser-core', version: '2.3.0'
     compile group: 'net.htmlparser.jericho', name: 'jericho-html', version: '3.3'
     compile group: 'net.sourceforge.jtds', name: 'jtds', version: '1.3.0'
+
+    antlr "org.antlr:antlr4:4.5" // use ANTLR version 4
 }
