--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile group: 'net.htmlparser.jericho', name: 'jericho-html', version: '3.3'
     compile group: 'net.sourceforge.jtds', name: 'jtds', version: '1.3.0'
     compile group: 'com.h2database', name: 'h2', version: '1.4.193'
+    compile group: 'com.mchange', name: 'c3p0', version: '0.9.2'
 
     antlr "org.antlr:antlr4:4.5" // use ANTLR version 4
 }
